[package]
name = "aidoku-multisource"
version = "0.1.0"
edition = "2021"
description = "Aidoku multi-source extension starting with mangabuddy.com"

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
